--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -67,9 +67,13 @@ jobs:
       - name: Set output paths
         run: |
           CITY_SLUG=$(node -e "const slugify=require('slugify'); console.log(slugify(process.env.STORE_NAME,{lower:true, strict:true}));")
-          OUT_DIR="outputs/canadiantire/${STORE_ID}-${CITY_SLUG}"
+          STORE_SLUG="${STORE_ID}-${CITY_SLUG}"
+          OUT_DIR="outputs/canadiantire/${STORE_SLUG}"
+          PUBLIC_DIR="public/canadiantire/${STORE_SLUG}"
           echo "CITY_SLUG=$CITY_SLUG" >> $GITHUB_ENV
+          echo "STORE_SLUG=$STORE_SLUG" >> $GITHUB_ENV
           echo "OUT_DIR=$OUT_DIR" >> $GITHUB_ENV
+          echo "PUBLIC_DIR=$PUBLIC_DIR" >> $GITHUB_ENV
         env:
           STORE_ID: ${{ matrix.storeId }}
           STORE_NAME: ${{ matrix.storeName }}
@@ -77,18 +81,21 @@ jobs:
       - name: Upload scraper outputs
         uses: actions/upload-artifact@v4
         with:
-          name: canadiantire-${{ matrix.storeId }}-${{ env.CITY_SLUG }}
+          name: canadiantire-${{ env.STORE_SLUG }}
           path: |
             ${{ env.OUT_DIR }}/
-            public/canadiantire/
+            ${{ env.PUBLIC_DIR }}/
           if-no-files-found: warn
 
   publish-rebuild-commit:
     runs-on: ubuntu-latest
     needs: scrape
     steps:
-      - name: Checkout repository
+      - name: Checkout ECONOPLUS repository
         uses: actions/checkout@v4
+        with:
+          repository: ${{ github.repository_owner }}/ECONOPLUS
+          path: econoplus
 
       - name: Download scraper outputs
         uses: actions/download-artifact@v4
@@ -99,7 +106,7 @@ jobs:
         run: |
           shopt -s nullglob
           for zipfile in artifacts/*.zip; do
-            unzip -o "$zipfile" -d .
+            unzip -o "$zipfile" -d staging
           done
 
       - name: Set up Node.js
@@ -117,21 +124,19 @@ jobs:
       - name: Rebuild Canadian Tire product index
         run: echo "Rebuild Canadian Tire product index"
 
-      - name: Debug artifact output paths
+      - name: Sync scraper outputs into ECONOPLUS repo
         run: |
-          echo "PWD=$(pwd)"
-          ls -la
-          find . -maxdepth 3 -type d -name canadiantire -print
-          find public -maxdepth 3 -type f -print || true
+          mkdir -p econoplus/public/canadiantire
+          if [ -d "staging/public/canadiantire" ]; then
+            cp -R staging/public/canadiantire/. econoplus/public/canadiantire/
+          fi
 
       - name: Commit & push
+        working-directory: econoplus
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add public/canadiantire 2>/dev/null || true
-          git add public/ct_products_index.json 2>/dev/null || true
-          git add public/canadiantire/_index.json 2>/dev/null || true
-          git add outputs/canadiantire 2>/dev/null || true
           if [ -n "$(git status --porcelain)" ]; then
             git commit -m "Update Canadian Tire (4 stores parallel)"
             git push origin main
