--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -117,17 +117,12 @@ jobs:
       - name: Run scraper for shard stores
         run: node scraper_ct.js --storesFile stores_for_shard.json
 
-      - name: Debug scraper outputs
-        run: |
-          echo "Listing outputs/canadiantire:"
-          find outputs/canadiantire -maxdepth 4 -print || true
-
       - name: Upload scraper outputs
         uses: actions/upload-artifact@v4
         if: always()
         with:
           name: canadiantire-shard-${{ matrix.shard }}
-          path: outputs/canadiantire/
+          path: outputs/
           if-no-files-found: warn
 
   publish-rebuild-commit:
@@ -166,8 +161,6 @@ jobs:
           mkdir -p econoplus/public/canadiantire
           echo "List artifacts contents:"
           find artifacts -maxdepth 4 -print || true
-          echo "Find artifacts outputs/canadiantire paths:"
-          find artifacts -path "*/outputs/canadiantire/*" -print || true
           echo "Find econoplus public/canadiantire:"
           find econoplus/public/canadiantire -print || true
 
